2006-11-14  Daniel Elstner  <daniel.kitta@gmail.com>

	* autogen.sh: Wholly replace this script with a critter from one
	of my personal projects, with slight modifications.  This one does
	some sophisticated stuff like probing version numbers of available
	automake and aclocal executables, in order to choose the right one
	accordingly.  All this is necessary to make the build system work
	robustly in custom environments such as Maemo where automake-1.9
	doesn't come preinstalled.
	While we're at it, kill some old cruft such as the check for GNU
	make.  This test was kind of pointless as the $MAKE variable was
	never exported.  Also get rid of the --enable-warnings=hardcore
	magic; this just doesn't belong here and could cause unnecessary
	trouble to non-developers.

2006-11-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/reference/Doxyfile.in: Add missing PREDEFINES so that we build 
	documentation only for the normal API.

2006-11-12  Ralf Stephan    <ralf@ark.in-berlin.de>
	
	* gdk/src/drawable.hg: Add comment paragraph about using cairo.

2006-11-10  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* tests/Makefile.am:
	* tests/main.cc: Add new test, with commented-out test for an alternative 
	API that I will add to glibmm.

2.10.3:

2006-11-08  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/adjustment.ccg:
	* gtk/src/adjustment.hg: Hand-code the constructor so that we can provide 
	the g_object_new() properties in a non-standard order, so that the value 
	is not ignored. This is what gtk_adjustment_new() does too.
	Bug #369335 from Daniel Holbach, via Vincent Levesque in the Ubuntu 
	Launchpad bug-tracker.

2006-10-11  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Added an appendix describing the optional 
	API for reduced resources devices, and the corresponding ifdefable macros.

2006-10-11  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/gdk_docs_override.xml: Provide a corrected version of the 