@@ -166,7 +166,7 @@ using &gtkmm; without purchasing licenses.
 <sect1>
 <title>Dependencies</title>
 <para>
-  Before attempting to install &gtkmm; 2.4, you should first install these other
+  Before attempting to install &gtkmm; 2.4, you might first need to install these other
   packages.
 </para>
 <itemizedlist>
@@ -442,11 +442,11 @@ just connecting to the existing &gtkmm; signals, see the <link linkend="sec-appe
 
 <sect1 id="sec-basics-ustring">
 <title>Glib::ustring</title>
-<para>You might be surprised to learn that &gtkmm; doesn't use std::string in it its interfaces. Instead it uses Glib::ustring, which is so similar and unobtrusive that you could actually pretend that each Glib::ustring is a std::string and ignore the rest of this section. But read on if you want to use languages other than English in your application.</para>
+<para>You might be surprised to learn that &gtkmm; doesn't use <classname>std::string</classname> in it its interfaces. Instead it uses <classname>Glib::ustring</classname>, which is so similar and unobtrusive that you could actually pretend that each Glib::ustring is a <classname>std::string</classname> and ignore the rest of this section. But read on if you want to use languages other than English in your application.</para>
 <para>std::string uses 8 bit per character, but 8 bits aren't enough to encode languages such as Arabic, Chinese, and Japanese. Although the encodings for these languages has now been specified by the Unicode Constortium, the C and C++ languages do not yet provide any standardised Unicode support. GTK+ and GNOME chose to implement Unicode using UTF-8, and that's what is wrapped by Glib::ustring. It provides almost exactly the same interface as std::string, along with automatic conversions to and from std::string.</para>
-<para>One of the benefits of UTF-8 is that you don't need to use it unless you want to, so you don't need to retrofit all of your code at once. std::string will still work for 7-bit ASCII strings. But when you try to localize your application for languages like Chinese, for instance, you will start to see strange errors, and possible crashes. Then all you need to do is start using Glib::ustring instead.</para>
+<para>One of the benefits of UTF-8 is that you don't need to use it unless you want to, so you don't need to retrofit all of your code at once. <classname>std::string</classname> will still work for 7-bit ASCII strings. But when you try to localize your application for languages like Chinese, for instance, you will start to see strange errors, and possible crashes. Then all you need to do is start using <classname>Glib::ustring</classname> instead.</para>
 <para>Note that UTF-8 isn't compatible with 8-bit encodings like ISO-8859-1. For instance, German umlauts are not in the ASCII range and need more than 1 byte in the UTF-8 encoding. If your code contains 8-bit string literals, you have to convert them to UTF-8 (e.g. the Bavarian greeting "Gr&uuml;&szlig; Gott" would be "Gr\xC3\xBC\xC3\x9F Gott").</para>
-<para>You should avoid C-style pointer arithmetic, and functions such as strlen(). In UTF-8, each character might need anywhere from 1 to 6 bytes, so it's not possible to assume that the next byte is another character. Glib::ustring worries about the details of this for you so you can use methods such as Glib::ustring::substr() while still thinking in terms of characters instead of bytes.</para>
+<para>You should avoid C-style pointer arithmetic, and functions such as strlen(). In UTF-8, each character might need anywhere from 1 to 6 bytes, so it's not possible to assume that the next byte is another character. <classname>Glib::ustring</classname> worries about the details of this for you so you can use methods such as Glib::ustring::substr() while still thinking in terms of characters instead of bytes.</para>
 
 <para>Unlike the Windows UCS-2 Unicode solution, this does not require any special compiler options to process string literals, and it does not result in Unicode executables and libraries which are incompatible with ASCII ones.</para>
 
@@ -8858,7 +8858,7 @@ For instance,
 
 <appendix id="sec-appendix-optional-api">
 <title>Optional API</title>
-<para>The gtkmm API is meant to be easy and convenient. However, some of these conveniences are not worth the overhead on reduced resources devices, such as the Nokia 770 internet tablet. For instance, with regular gtkmm you can implement a signal handler by deriving the class and overriding its virtual on_thesignalname() method. Bbut that additional API increases code size. And in the case of virtual methods, it increases per-object memory size, and demands that the linker loads the method's symbol even if you don't use it. Therefore, gtkmm can be built with a reduced API. In general, the optional API is rarely used, and there are slightly less convenient alternatives for all of the optional API.</para>
+<para>The gtkmm API is meant to be easy and convenient. However, some of these conveniences are not worth the overhead on reduced resources devices, such as the Nokia 770 internet tablet. For instance, with regular gtkmm you can implement a signal handler by deriving the class and overriding its virtual on_thesignalname() method. But that additional API increases code size. And in the case of virtual methods, it increases per-object memory size, and demands that the linker loads the method's symbol even if you don't use it. Therefore, gtkmm can be built with a reduced API. In general, the optional API is rarely used, and there are slightly less convenient alternatives for all of the optional API.</para>
 <para>When gtkmm has been built with optional API disabled, macros will be undefined, indicating that the API is not available. If you attempt to compile an application that uses this optional API, against a version of gtkmm that has disabled that API, you will see compiler warnings about missing functions.</para>
 <para>The following sections describe the available configure options used to disable optional API. Most developers will rarely need to provide these configure options, because they will rarely build glibmm or gtkmm, preferring to use official packages or installers. However, if you are developing for an embedded device, you might need to be aware of these options.</para>
 
@@ -8883,8 +8883,8 @@ When enable-api-exceptions is disabled, no exceptions will be used in the glibmm
 <sect2>
 <title>--enable-api-properties=no</title>
 <para>
-When enable-api-properties is disabled, no property accessor will be available in the glibmm or gtkmm API. For instance, the Gtk::Button::property_label() method will not be available. &quot;getter&quot; and &quot;setter&quot; methods, such as Gtk::Button::set_label() will still be available.</para>
-<para>When you really need to set or get the property value directly, for instance when using the Gtk::CellRenderer API, you can use the alternative set_property() and get_property() methods. For instance:</para>
+When enable-api-properties is disabled, no property accessors will be available in the glibmm or gtkmm API. For instance, the <function>Gtk::Button::property_label()</function> method will not be available. &quot;getter&quot; and &quot;setter&quot; methods, such as <function>Gtk::Button::set_label()</function> will still be available.</para>
+<para>When you really need to set or get the property value directly, for instance when using the <classname>Gtk::CellRenderer</classname> API, you can use the alternative <function>set_property()</function> and <function>get_property()</function> methods. For instance:</para>
 <para>
 <programlisting>
 #ifdef GLIBMM_PROPERTIES_ENABLED
@@ -8900,16 +8900,16 @@ When enable-api-properties is disabled, no property accessor will be available i
 <sect2>
 <title>--enable-api-vfuncs=no</title>
 <para>
-When enable-api-exceptions is disabled, no _vfunc virtual methods will be available in the glibmm or gtkmm API. These methods allow the developer to override some low-level behaviour of the underlying GTK+ objects, and they are therefore rarely used. For instance, Gtk::Frame::compute_child_allocation_vfunc() will not be available.</para>
-<para>However, if you really need to override a _vfunc, for instance when implementing a custom Gtk::TreeModel, you may directly access the underlying GObject via the gobj() method.</para>
+When enable-api-exceptions is disabled, no _vfunc virtual methods will be available in the glibmm or gtkmm API. These methods allow the developer to override some low-level behaviour of the underlying GTK+ objects, and they are therefore rarely used. For instance, <function>Gtk::Frame::compute_child_allocation_vfunc()</function> will not be available.</para>
+<para>However, if you really need to override a _vfunc, for instance when implementing a custom <classname>Gtk::TreeModel</classname>, you may directly access the underlying GObject via the <function>gobj()</function> method.</para>
 <para>If vfuncs are not available, the GLIBMM_VFUNCS_ENABLED macro will not be defined.</para>
 </sect2>
 
 <sect2>
 <title>--enable-api-default-signal-handlers=no</title>
 <para>
-When enable-api-exceptions is disabled, no virtual signal handler methods will be available in the glibmm or gtkmm API. For instance, the Gtk::Button::on_clicked() dialog will not be provided. Instead you must connect a signal handler by using the signal_clicked() accessor. This option offers a considerable code size and per-object memory reduction.</para>
-<para>Note, however, that the compiler will not complain if you attempt to override a default signal handler when they are not supported by gtkmm, because the compiler can not know that you expected to override a virtual method.</para>
+When enable-api-exceptions is disabled, no virtual signal handler methods will be available in the glibmm or gtkmm API. For instance, the <function>Gtk::Button::on_clicked()</function> method will not be provided. Instead you must connect a signal handler by using the signal_clicked() accessor. This option offers a considerable code size and per-object memory reduction.</para>
+<para>Note, however, that the compiler will not complain if you attempt to override a default signal handler when they are not supported by &gtkmm;, because the compiler cannot know that you expected to override a virtual method.</para>
 <para>If default signal handlers are not available, the GLIBMM_DEFAULT_SIGNAL_HANDLERS_ENABLED macro will not be defined.</para>
 </sect2>
 
