@@ -1,3 +1,8 @@
+2006-11-20  Murray Cumming  <murrayc@murrayc.com>
+
+	* docs/tutorial/gtkmm-tut.xml: Optional API appendix: Use the 
+	<function> tag.
+
 2006-11-14  Daniel Elstner  <daniel.kitta@gmail.com>
 
 	* autogen.sh: Wholly replace this script with a critter from one
